<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/golden" >

    <LinearLayout
        android:id="@+id/tab_view"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/main_page_tab_height"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bt_sutra_entrance"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:paddingBottom="@dimen/main_page_tab_padding"
            android:paddingTop="@dimen/main_page_tab_padding"
            android:text="@string/sutra_entrance"
            android:textSize="@dimen/main_page_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bt_history"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:paddingBottom="@dimen/main_page_tab_padding"
            android:paddingTop="@dimen/main_page_tab_padding"
            android:text="@string/history"
            android:textSize="@dimen/main_page_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bt_search"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:paddingBottom="@dimen/main_page_tab_padding"
            android:paddingTop="@dimen/main_page_tab_padding"
            android:text="@string/search"
            android:textSize="@dimen/main_page_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_main_page"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/tab_view"
        android:background="@color/transparent"
        android:paddingBottom="@dimen/main_page_tab_padding" >
    </android.support.v4.view.ViewPager>

    <ProgressBar
        android:id="@+id/progress_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>